<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FF9800"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="161dp"
        android:layout_height="159dp"
        android:src="@drawable/studifylogo"
        android:contentDescription="@string/logoforlogin" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_to_studify"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:text="@string/sign_in_to_continue"
        android:textSize="15sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!---Username Input-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck,TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <!---Password Input-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password1"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotpassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"

            />

        <Button
            android:id="@+id/gobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#4CAF50"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/newusersignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:text="@string/new_user_sign_up"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:textColor="@color/black"
            />






    </LinearLayout>




</LinearLayout>